# 0xPOAP

./: .gitignore
examples/: README.md
examples/xPOAP/: .gitignore  Cargo.toml
examples/xPOAP/host/: Cargo.toml
examples/xPOAP/host/src/: main.rs
examples/xPOAP/methods/guest/: Cargo.toml
examples/xPOAP/methods/guest/src/: main.rs
relay/: Cargo.toml
view-call/src/: config.rs
