[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true , features=["k256"]}
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
erc20-methods = { workspace = true }
risc0-ethereum-view-call = { path = "../../../view-call", features = ["host"] }
risc0-zkvm = { workspace = true, features = ["client"] }
tracing-subscriber = { workspace = true }
rand_core = "0.6.4"
hex-literal = "0.4"
k256 = { version = "*", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
